# ai-tools-agent-os

./: .agentic-dev.json  .agyignore  .cursorrules  .dockerignore  .env.example  .gitignore  .venv  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  PRODUCT.md  PROMPT.md  README.md  STATUS.md  dashboard.db  docker-compose.yml  fix_plan.md  handoff_notes.md  implementation_plan.md  install.sh  loop-starter-guide.md  pyproject.toml  ruff.toml  skills-lock.json  theme.css
tools/: AGENTS.md  advanced_workflow.py  agent_skills.py  bitrix_healer.py  build_release.py  check_rules.py  checker_review.py  clean_sessions.py  cli.py  code_stats.py  collect_handoffs.py  command_safety_gate.py  competitive_analysis_agent.py  config.py  context_assembler.py  context_optimizer.py  context_utils.py  convert_docs.py  dashboard.py  dashboard_logger.py  dashboard_parking_ufa.txt  demo_obsidian_flow.py  diff_applier.py  document_converter.py  generate_workflows.py  health_check.py  hermes_system_prompt.md  humanizer.py  interaction_core.py  job_runner.py  json_utils.py  lead_swarm.py  learning_queue.py  linter_config_guard.py  llm_wiki.py  mcp_server.py  normalize_constitution.py  obsidian_cli.py  parse_hh.py  parse_site.py  (+44 more)
tools/.obsidian/: workspace.json
tools/clean_image_metadata/: README.md  clean_image_metadata.py  run.bat
tools/dashboard_mvp/: README.md  TZ_Ruka_na_pulse.txt  app.py  config.py  dashboard.db  db.py  implementation_plan.md  init_db.py  main.py  models.py  requirements.txt  run_all.py  security_utils.py  streamlit_app.py  sync.py  test_api.py  test_sync.py  trigger_sync_test.py  vercel.json  yandex_oauth.py
tools/knowledge/: __init__.py  memory.py  search.py  wiki.py
tools/monitoring/: dashboard.py
tools/obsidian/: apply_rules.py  obsidian_cli.py  obsidian_sync.py  rotate_handoffs.py  semantic_search.py  session_logger.py  task_observer.py
tools/prompts/: hermes_system.md
tools/scraping/: browser_use_template.py  skeptic.py  wb_parser.py
tools/security/: security_scanner.py
tools/tests/: conftest.py  test_advanced_workflow.py  test_agent_skills.py  test_antigravity_rules.py  test_background_jobs.py  test_bitrix_healer.py  test_bitrix_knowledge.py  test_build_release.py  test_business_agents.py  test_changed_files_validators.py  test_checker_review.py  test_clean_image_metadata.py  test_clean_sessions.py  test_cli.py  test_code_stats.py  test_command_safety_gate.py  test_config.py  test_context7_decision.py  test_context_assembler.py  test_context_optimizer.py  test_context_utils.py  test_danmartell.py  test_dashboard_logger.py  test_deep_clean.py  test_diff_applier.py  test_document_converter.py  test_file_lock.py  test_fs_slicing_and_roles.py  test_healer.py  test_hermes_concurrency.py  test_json_utils.py  test_knowledge_facade.py  (+44 more)
(+2818 files in other folders)
