[project]
name = "ai-tools-workspace"
version = "0.1.0"
package = false
requires-python = ">=3.12"

dependencies = [
    "textual>=0.50.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "browser-use>=0.9.2",
]

[tool.uv.workspace]
members = [
    "geo-seo",
    "ai-sales",
    "ai-marketing",
    "ai-legal"
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
