[project]
name = "ai-tools-workspace"
version = "0.1.0"
package = false
requires-python = ">=3.12"

dependencies = [
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "textual>=0.50.0",
    "python-dotenv>=1.0.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary",
    "tapi-yandex-direct",
    "tapi-yandex-metrika",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
    "google-generativeai>=0.8.0",
    "google-genai>=0.1.0",
    "piexif>=1.1.3",
    "pydantic-settings>=2.0.0",
    "greenlet>=3.0.0",
]

[tool.uv.workspace]
members = [
    "geo-seo",
    "ai-sales",
    "ai-marketing",
    "ai-legal"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "bandit>=1.7.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "./tools"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_ignores = true
show_error_codes = true
exclude = [
    '^venv/',
    '^\.venv/',
    '^tools/tests/',
    '^geo-seo/tests/',
]


