[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-tools-core"
version = "0.1.0"
description = "Core utilities for Antigravity AI-Tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "fastembed>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "loguru>=0.7.0",
    "pytest-socket>=0.7.0",
    "browser-use>=0.1.0",
    "langchain-google-genai>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
